learning of model quantisation

--- a/easy/CNN.ipynb
+++ b/easy/CNN.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,9 @@
      "text": [
       "Epoch [1/5], Loss: 0.8858\n",
       "Epoch [2/5], Loss: 1.2196\n",
-      "Epoch [3/5], Loss: 0.4477\n"
+      "Epoch [3/5], Loss: 0.4477\n",
+      "Epoch [4/5], Loss: 0.3095\n",
+      "Epoch [5/5], Loss: 0.3235\n"
      ]
     }
    ],
